# tkp_gazebo_simulation

./: CMakeLists.txt  README.md  package.xml
files/parameters/: uav_control_parameters.txt  uav_record_parameters.txt  ugv_control_parameters.txt
files/routes/: uav_trajectory_45.txt  uav_trajectory_90.txt
include/: data_recorder.h  parameters.h  uav_controller.h  ugv_controller.h  vehicle_controller.h
launch/: check_urdf.launch  rtabmap_uav.launch  uav_simulation.launch  world.launch
models/image_plane/: model-1_4.sdf  model.config  model.sdf
models/image_plane/materials/scripts/: image_plane.material
rviz/: base_config.rviz  test_config.rviz  uav.rviz
src/: data_recorder.cpp  parameters.cpp  uav_controller.cpp  uav_simulation.cpp  ugv_controller.cpp  vehicle_controller.cpp
urdf/: materials.xacro  simple_model.urdf  uav.gazebo  uav.xacro
worlds/: trees_and_buildings.world
